<resources>
    <string name="app_name">TodoList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_chevron_description">Swipe for more actions</string>
    <string name="ic_rbtn_status">Shows current status of task</string>
    <string name="new_task_edit_text_hint">Что надо сделать...</string>
    <string name="newtask_priority_label">Важность</string>
    <string name="newtask_deadline_label">Сделать до</string>
    <string name="newtask_button_remove_label">Удалить</string>
    <string name="tasklist_toolbar_label">Мои дела</string>
    <string name="fab_add_new_task">Добавить новую задачу</string>
    <string name="button_priority_off">нет</string>
    <string name="action_sort_label">Сортировка</string>
    <string name="action_filter_label">Фильтр</string>
    <string name="action_settings_label">Настройки</string>
    <string name="action_save_label">Сохранить</string>
    <string name="action_delete_label">Удалить</string>
    <string name="delete_task_dialog_title">Удалить задачу?</string>
    <string name="discard_changes_dialog_title">Сохранить изменения?</string>
    <string name="delete_task_dialog_positive_action">Удалить</string>
    <string name="discard_changes_dialog_positive_action">Сохранить</string>
    <string name="discard_changes_dialog_negative_action">Нет</string>
    <string name="sort_by_label">Сортировать по</string>
    <string name="by_date_created_label">Дате создания</string>
    <string name="by_date_modified_label">Дате изменения</string>
    <string name="by_importance_label">Важности</string>
    <string name="by_deadline_label">Дедлайну</string>
    <string name="by_status_label">Статусу</string>
    <string name="order_label">Порядок</string>
    <string name="ascending_label">По возрастанию</string>
    <string name="descending_label">По убыванию</string>
    <string name="cancel_label">Отмена</string>
    <string name="apply_label">Применить</string>
</resources>